--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: https://arukayies.github.io/
+baseURL: https://arukayies.github.io/homepage/
 languageCode: ja
 title: くらぶろぐ
 publishDir: public
