fix: searchページでJSON出力を有効化

--- a/hugo.yml
+++ b/hugo.yml
@@ -67,6 +67,8 @@ outputs:
   home:
     - HTML
     - JSON
+  search: # Add this section for search page JSON output
+    - JSON
   page:
     - HTML
 
