fix: searchセクションのJSON出力を有効化

--- a/hugo.yml
+++ b/hugo.yml
@@ -67,10 +67,10 @@ outputs:
   home:
     - HTML
     - JSON
-  search: # Add this section for search page JSON output
-    - JSON
   page:
     - HTML
+  search: # Explicitly define output for 'search' section
+    - JSON
 
 menu:
   footer:
