fix: searchセクションのJSON出力を有効化

--- a/hugo.yml
+++ b/hugo.yml
@@ -69,6 +69,8 @@ outputs:
     - JSON
   page:
     - HTML
+  search: # Explicitly define output for 'search' section
+    - JSON
 
 menu:
   footer:
