feat: ヨーロッパ旅行の記事更新とサイト改善
- ヨーロッパハネムーンの記事を追加・更新
- SCSSのスタイル調整
- hugo.ymlの設定変更
- パンくずリストの修正
- アフィリエイト検索用のショートコードを追加

--- a/hugo.yml
+++ b/hugo.yml
@@ -79,7 +79,7 @@ params:
       instagram: arukayies
       # facebook: https://www.facebook.com/facebook
       youtube: https://www.youtube.com/channel/UCoO5ZwX9e7jToe7eo-h62HQ
-      github: arukayies
+      # github: arukayies
       # qiita: qiita
       # zenn: zenn
       # email: my_email@example.com
