アナリティクスとAdSenseのコードを追加

--- a/hugo.yml
+++ b/hugo.yml
@@ -3,7 +3,7 @@ languageCode: ja
 title: くらぶろぐ
 publishDir: public
 copyright: © 2019-2025 @arukayies
-googleAnalytics:
+googleAnalytics: G-N7L9PJCHPF
 disqusShortname:
 
 taxonomies:
