--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,9 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
+      - name: Clean public directory
+        run: rm -rf public
+
       - name: Build
         run: hugo --minify
 
