--- a/hugo.yml
+++ b/hugo.yml
@@ -12,7 +12,7 @@ taxonomies:
   # pickup: pickups
   archive: archives
 
-disablePathToLower: true
+disablePathToLower: false
 hasCJKLanguage: true
 summaryLength: 200
 pagination:
@@ -61,7 +61,7 @@ params:
     # email: my_email@example.com
     url: https://arukayies.com/
   description: DIYネタについてまとめてます。
-  # icon: image/icon.png
+  icon: image/icon.png
   images:
     - image/og_large.png
   notFoundImage: image/404.png
